--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@ document.getElementById(pack.Package + '-link').addEventListener('click', functi
 });
 	}
 };
-xhr.open("GET","https://uckermark.github.io/repo/Packages");
+xhr.open("GET","/repo/Packages");
 xhr.send();
 </script>
 </div>
