--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
 	<body>
 <div id="title">Uckermark's Cydia repo</div>
 <div id="content"><br><br>
-<button id="add-to-cydia" onclick="window.location.href = 'cydia://url/https://cydia.saurik.com/api/share#?source=https://www.uckermark.tk/repo/';">Add to Cydia</button>
-<button id="add-to-sileo" onclick="window.location.href = 'sileo://source/https://www.uckermark.tk/repo/';">Add to Sileo</button>
-<button id="add-to-zebra" onclick="window.location.href = 'zbra://sources/add/https://www.uckermark.tk/repo/';">Add to Zebra</button>
-<button id="add-to-installer" onclick="window.location.href = 'installer://add/repo=https://www.uckermark.tk/repo/';">Add to Installer</button>
+<button id="add-to-cydia" onclick="window.location.href = 'cydia://url/https://cydia.saurik.com/api/share#?source=https://repo.uckermark.dev';">Add to Cydia</button>
+<button id="add-to-sileo" onclick="window.location.href = 'sileo://source/https://repo.uckermark.dev';">Add to Sileo</button>
+<button id="add-to-zebra" onclick="window.location.href = 'zbra://sources/add/https://repo.uckermark.dev';">Add to Zebra</button>
+<button id="add-to-installer" onclick="window.location.href = 'installer://add/repo=https://repo.uckermark.dev';">Add to Installer</button>
 <span id="ocy"></span><br><br>
 <hr>
 <h4>These are the packages on this repo</h4>
