--- a/index.html
+++ b/index.html
@@ -1,132 +1,149 @@
 <!DOCTYPE html>
-<html>
-	<head>
-		<link rel="stylesheet" type="text/css" href="style.css">
-	</head>
-	<body>
-<div id="title">Uckermark's Cydia repo</div>
-<div id="content"><br><br>
-<button id="add-to-cydia" onclick="window.location.href = 'cydia://url/https://cydia.saurik.com/api/share#?source=https://repo.uckermark.dev';">Add to Cydia</button>
-<button id="add-to-sileo" onclick="window.location.href = 'sileo://source/https://repo.uckermark.dev';">Add to Sileo</button>
-<button id="add-to-zebra" onclick="window.location.href = 'zbra://sources/add/https://repo.uckermark.dev';">Add to Zebra</button>
-<button id="add-to-installer" onclick="window.location.href = 'installer://add/repo=https://repo.uckermark.dev';">Add to Installer</button>
-<span id="ocy"></span><br><br>
-<hr>
-<h4>These are the packages on this repo</h4>
-<div id="samples" style="width:100%"></div>
-<script type="text/javascript">
-//Some fast iOS check.
-is_ios = (navigator.userAgent.match(/iPad/i) != null) || (navigator.userAgent.match(/iPhone/i) != null) || (navigator.userAgent.match(/iPod/i) != null);
-if (!is_ios) document.getElementById('ocy').innerHTML = 'Open this site on your iOS device to add the repository';
-//The functionality for the package list.
-function Apt_package() {
-	this.Package;
-	this.Version;
-	this.Section;
-	this.Installed_Size;
-	this.Description;
-	this.Name;
-	this.Author;
-	this.Filename;
-	this.Depiction;
-} //Constructor for Apt_package object.
-function parsePackage(string) { //TODO: Make sure no key is undefined
-	var a_package = new Apt_package();
-	a_package.Depiction = 'undefined.html';
-	var lines = string.split('\n');
-	var c;
-	for (c = 0; c < lines.length; ++c) {
-		var line = lines[c];
-		if (line.search(':') == -1) continue;
-		var components = line.split(':'); //Quick and dirty.
-		var key = components.shift();
-		var value = components.join(':').trim();
-		switch (key) {
-			case 'Package':
-				a_package.Package = value;
-				break;
-			case 'Version':
-				a_package.Version = value;
-				break;
-			case 'Section':
-				a_package.Section = value;
-				break;
-			case 'Installed-Size':
-				a_package.Installed_Size = value;
-				break;
-			case 'Description':
-				a_package.Description = value;
-				break;
-			case 'Name':
-				a_package.Name = value;
-				break;
-			case 'Author':
-				a_package.Author = value;
-				break;
-			case 'Filename':
-				a_package.Filename = value;
-				break;
-			case 'Depiction':
-				a_package.Depiction = value;
-				break;
-			default:
-				break; //Unknown key.
-		}
-	}
-	if (a_package.Package == undefined) return undefined;
-	return a_package;
-}
-function parsePackages(parse) {
-	var depictions = {};
-	while (parse.indexOf('\r') >= 0) parse = parse.replace('\r', ''); //Remove all carriage returns, which should not be there, anyways.
-	var packages = parse.split('\n\n');
-	for (var c = 0; c < packages.length; ++c) {
-		var a_package = parsePackage(packages[c]);
-		if (a_package == undefined) continue;
-		var pid = a_package.Package;
-		if (depictions[pid] && (parseFloat(a_package.Version) >= parseFloat(depictions[pid].Version))) { //Only keep the latest version.
-			depictions[pid] = a_package;
-		} else if (depictions[pid] == undefined) { //Package not added yet, add.
-			depictions[pid] = a_package;
-		}
-	}
-    return depictions;
-}
-var xhr;
-if (window.XMLHttpRequest) {
-    xhr = new XMLHttpRequest();
-} else if (window.ActiveXObject) {
-    xhr = new ActiveXObject('Microsoft.XMLHTTP');
-}
-xhr.onreadystatechange = function() {
-	if (!(xhr.readyState == 4)) return;
-	var depictionArray = parsePackages(xhr.responseText);
-	if (!depictionArray) return;
-	for (key in depictionArray) {
-		var pack = depictionArray[key];
-		//The following code is very messy. You have been warned.
-		console.log(pack.Package)
-		document.getElementById('samples').innerHTML = document.getElementById('samples').innerHTML +
-			'<a id="' + pack.Package + '-link" href="#">' + pack.Name + ' (' + pack.Version + ')</a><br>' +
-			'<div id="u_' + pack.Package + '" style="display:none;">' +
-			'&nbsp;&nbsp;' + pack.Description + '<br>' +
-			(is_ios ? '&nbsp;&nbsp;<a href="' + 'sileo://package/' + pack.Package + '" target="_blank">Show in Sileo.</a><br>' : '') +
-			'&nbsp;&nbsp;<a href="' + pack.Depiction + '">Show more info.</a><br>' +
-			'&nbsp;&nbsp;<a href="' + pack.Filename + '" target="_blank">Download the deb package.</a><br><br>' +
-			'</div>';
+<html lang="en">
 
-document.getElementById(pack.Package + '-link').addEventListener('click', function() {
-  var e = document.getElementById('u_' + pack.Package);
-  e.style.display = e.style.display = (e.style.display == 'block' ? 'none' : 'block');
-});
-	}
-};
-xhr.open("GET","/repo/Packages");
-xhr.send();
-</script>
-</div>
-<noscript>
-As this website uses JavaScript to generate a semi-dynamically created page, you need to activate JavaScript!
-</noscript>
-	</body>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="styles.css">
+    <title>Uckermark's Repo</title>
+</head>
+
+<body>
+    <div class="container">
+        <h1>Uckermark's Repo</h1>
+
+        <div class="button-container">
+            <button id="add-to-cydia" onclick="addToCydia()">Add to Cydia</button>
+            <button id="add-to-sileo" onclick="addToSileo()">Add to Sileo</button>
+            <button id="add-to-zebra" onclick="addToZebra()">Add to Zebra</button>
+            <button id="add-to-installer" onclick="addToInstaller()">Add to Installer</button>
+        </div>
+
+        <h2>Packages</h2>
+
+        <div id="packages-container"></div>
+
+        <script>
+            const packageDataList = {};
+
+            // Fetch Packages file from the repo
+            fetch('https://repo.uckermark.dev/Packages')
+                .then(response => response.text())
+                .then(data => {
+                    // Split the Packages file into individual package entries
+                    const packages = data.split('\n\n');
+
+                    // Store information about each package and its architectures
+                    packages.forEach(packageData => {
+                        const packageInfo = parsePackageInfo(packageData);
+                        const packageName = packageInfo.Name;
+
+                        if (!packageDataList[packageName]) {
+                            packageDataList[packageName] = packageInfo;
+                        } else {
+                            packageDataList[packageName].Arch.push(...packageInfo.Arch);
+                        }
+                    });
+
+                    // Display limited information for each unique package
+                    const packagesContainer = document.getElementById('packages-container');
+                    Object.values(packageDataList).forEach(packageInfo => {
+                        const packageElement = createPackageElement(packageInfo);
+                        packagesContainer.appendChild(packageElement);
+                    });
+                })
+                .catch(error => console.error('Error fetching Packages file:', error));
+
+            // Function to parse package information
+            function parsePackageInfo(packageData) {
+                const lines = packageData.split('\n');
+                const packageInfo = {
+                    Name: '',
+                    Description: '',
+                    Author: '',
+                    Arch: [],
+                    Download: '',
+                    Icon: '',
+                };
+
+                lines.forEach(line => {
+                    const [key, value] = line.split(': ');
+                    if (key && value) {
+                        if (key === 'Name') packageInfo.Name = value;
+                        else if (key === 'Description') packageInfo.Description = value;
+                        else if (key === 'Author') packageInfo.Author = value;
+                        else if (key === 'Architecture') packageInfo.Arch.push(value);
+                        else if (key === 'Filename') packageInfo.Download = `https://repo.uckermark.dev/${value}`;
+                        else if (key === 'Icon') packageInfo.Icon = value;
+                    }
+                });
+
+                return packageInfo;
+            }
+
+            // Function to create HTML element for a package
+            function createPackageElement(packageInfo) {
+                // Skip packages without a name (empty Name field)
+                if (!packageInfo.Name) {
+                    return document.createElement('div');
+                }
+
+                const packageElement = document.createElement('div');
+                packageElement.classList.add('package-box');
+
+                // Display package icon
+                if (packageInfo.Icon) {
+                    const iconElement = document.createElement('img');
+                    iconElement.src = packageInfo.Icon;
+                    iconElement.alt = 'Package Icon';
+                    packageElement.appendChild(iconElement);
+                }
+
+                // Display package information
+                const infoElement = document.createElement('div');
+                infoElement.classList.add('package-info');
+
+                // Display package name, description, and author
+                ['Name', 'Description', 'Author'].forEach(key => {
+                    const detailElement = document.createElement('p');
+                    detailElement.innerHTML = `<strong>${key}:</strong> ${packageInfo[key]}`;
+                    infoElement.appendChild(detailElement);
+                });
+
+                // Display download button for each architecture
+                packageInfo.Arch.forEach(arch => {
+                    const downloadButton = document.createElement('a');
+                    downloadButton.classList.add('download-button');
+                    downloadButton.href = packageInfo.Download.replace(/_[^.]+\.deb$/, `_${arch}.deb`);
+                    downloadButton.setAttribute('target', '_blank'); // Open link in a new tab
+                    downloadButton.textContent = `Download for ${arch}`;
+                    infoElement.appendChild(downloadButton);
+                });
+
+                packageElement.appendChild(infoElement);
+
+                return packageElement;
+            }
+
+            // Functions to add repo to package managers
+            function addToCydia() {
+                window.location.href = 'cydia://url/https://cydia.saurik.com/api/share#?source=https://repo.uckermark.dev';
+            }
+
+            function addToSileo() {
+                window.location.href = 'sileo://source/https://repo.uckermark.dev';
+            }
+
+            function addToZebra() {
+                window.location.href = 'zbra://sources/add/https://repo.uckermark.dev';
+            }
+
+            function addToInstaller() {
+                window.location.href = 'installer://add/repo=https://repo.uckermark.dev';
+            }
+        </script>
+    </div>
+</body>
+
 </html>
+
